--- a/provision/provision_playbook.yaml
+++ b/provision/provision_playbook.yaml
@@ -6,15 +6,9 @@
   vars_files:
     - group_vars/all/pass.yaml
   gather_facts: false
+  become: true
 
   tasks:
-    - name: Get Info Block
-      block:
-        - name: Print debug info
-          debug: msg="{{aws_access_key}}"
-
-      tags: ['always', 'getinfoonly']
-
     - name: Provisioning Instances
       block:
         - name: Provision "{{item}}" 
@@ -43,18 +37,18 @@
           register: ec2
           delegate_to: localhost
           loop:
-            - { name: 'eng84_alexis_controller', groups: 'control' , private_ip: '10.0.1.11'}
-            - { name: 'eng84_alexis_application', groups: 'application' , private_ip: '10.0.1.12'}
-            - { name: 'eng84_alexis_database', groups: 'database' , private_ip: '10.0.1.13'}
+            - { name: 'eng84_alexis_controller', groups: 'control' , private_ip: '10.0.1.11', ami: 'ami-0943382e114f188e8'}
+            - { name: 'eng84_alexis_application', groups: 'application' , private_ip: '10.0.1.12', ami: 'ami-038d7b856fe7557b3'}
+            - { name: 'eng84_alexis_database', groups: 'database' , private_ip: '10.0.1.13', ami: 'ami-038d7b856fe7557b3'}
           register: ec2
-      tags: ['never', 'ec2-create']
+      tags: ['never', 'ec2-create', 'ec2']
 
     - name: Add Instances to Host Group
       add_host:
         hostname: "{{item.instances[0].public_ip}}"
         groupname: "{{item.instances[0].tags.group}}" 
       loop: "{{ec2.results}}"
-      tags: ['never', 'ec2-create']
+      tags: ['never', 'ec2-create', 'ec2']
 
     - name: Wait for SSH to come up
       local_action:
@@ -68,57 +62,72 @@
 
     - name: Add Controller key to known hosts
       connection: local
-      shell: "ssh-keyscan -H {{groups.control}} >> ~/.ssh/known_hosts"
+      shell: |
+        ssh-keyscan -H {{groups.control[0]}} >> /home/vagrant/.ssh/known_hosts
       tags: ['never', 'ec2-create', 'ec2']
 
+      #     - name: debug ssh agent
+      #       become: false
+      #       shell: |
+      #         ssh-add -L 
+      #       register: sshagent
+      #       tags: ['never', 'ec2-controller', 'ec2']
+      # 
+      #     - name: debug ssh agent - show message
+      #       debug:
+      #         msg: "{{sshagent}}"
+      #       tags: ['never', 'ec2-controller', 'ec2']
 
 - name: Configure Controller
   hosts: control
-  gather_facts: true
-  become: true
   remote_user: ubuntu
+  gather_facts: true
+  become: false
   tasks:
-    - name: Synchronise files between controller database
+
+    - name: Rsync configuration files to controller
       ansible.posix.synchronize:
         src: /home/vagrant/controller
         dest: /home/ubuntu/
-      tags: ['never', 'ec2-controller' ]
+      tags: ['never', 'ec2-controller', 'ec2']
 
-    - name: Synchronise files between controller database
+    - name: Rsync application files to controller
       ansible.posix.synchronize:
         src: /home/vagrant/application
         dest: /home/ubuntu/
-      tags: ['never', 'ec2-controller']
+      tags: ['never', 'ec2-controller', 'ec2']
 
 - name: Set up SSH Agent forwarding
   hosts: localhost
-  gather_facts: true
+  gather_facts: false
   become: true
   vars:
     controller_host: "{{ groups.control[0] }}"
+    application_host: "{{ groups.application[0] }}"
   tasks:
-    - name: make config file
+
+    - name: Remove old ssh config
+      file:
+        state: absent
+        path: /home/vagrant/.ssh/config
+      tags: ['never', 'ec2-ssh', 'ec2']
+
+    - name: Setup ssh config 
       copy:
         src: /home/vagrant/provision/config
-        dest: /home/vagrant/.ssh/
-      tags: ['never', 'ec2-controller']
+        dest: /home/vagrant/.ssh/config
+      tags: ['never', 'ec2-ssh', 'ec2']
 
-    - name: add host to config
+    - name: Add host ip to config
       ansible.builtin.lineinfile:
         path: /home/vagrant/.ssh/config
         line: "  HostName {{controller_host}}"
         insertbefore: ^\W{2}User
-      tags: ['never', 'ec2-controller']
+      tags: ['never', 'ec2-ssh', 'ec2']
 
-      #     - name: execute connection shell
-      #       command: /bin/bash "/home/vagrant/provision/connection.sh"
-      #       tags: ['never', 'ec2-controller', 'ec2-connection']
+    - name: Save application server IP
+      shell: |
+        echo "Application found at:\nhttp://{{ application_host }}" > /home/vagrant/myhosts.txt
+      tags: ['never', 'ec2-ssh', 'ec2']
 
 
-      #     Run provision file that runs ansible playbook on controller with ssh port forwarding?
-      #
-      #
-      #     - name: run provision file 
-      #       shell: db_env/provision.sh 
-      #       tags: ['never', 'ec2-configure']
-      #
